# cmnavsegda

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cmhello.c
